--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -27,9 +27,11 @@
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/msg_content"
-            android:text="这是标题"
+            android:text="这是内容"
             android:textSize="12sp"
             android:paddingTop="5dp"
+            android:maxLines="1"
+            android:maxEms="10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
