--- a/app/src/main/res/layout/message_receive_item.xml
+++ b/app/src/main/res/layout/message_receive_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
@@ -20,21 +21,19 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_marginLeft="10dp"
+
             android:id="@+id/receive_content"
             android:background="@drawable/receive_content_bg"
             style="@style/normal_item_padding"
             android:textColor="@color/black"
             android:text="hahahahahahhahahahahahhahahahahahhahahahhahahahhahaahhahaahahhahahahaha"
-
+            android:layout_marginStart="10dp"
             android:maxWidth="250dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:marginLeft="10dp"
             android:layout_toRightOf="@+id/receive_img" />
 
         <ImageView
-
             android:id="@+id/receive_img"
             android:src="@mipmap/yjsw"
             android:background="@drawable/receive_content_bg"
