--- a/app/src/main/res/layout/message_send_item.xml
+++ b/app/src/main/res/layout/message_send_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/receive_time"
+        android:id="@+id/send_time"
         android:padding="4dp"
         android:layout_gravity="center"
         android:textColor="@color/white"
