--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -94,4 +94,8 @@
         android:background="@color/grey"
         android:layout_width="match_parent"
         android:layout_height="10dp"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
