--- a/app/src/main/res/drawable/top_bottom_border.xml
+++ b/app/src/main/res/drawable/top_bottom_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- This is the line -->
-    <item android:right="-1dp" android:left="-1dp" android:top="-2dp">
+    <item android:right="-2dp"  android:left="-2dp">
         <shape>
             <solid android:color="@android:color/transparent" />
             <stroke android:width="1dp" android:color="@color/deep_grey" />
